tests/negative/symbols/redef.orng
fn main() -> Int {
    let x = 0
    let x = 4
    x
}